--- a/microlight-js/index.html
+++ b/microlight-js/index.html
@@ -13,6 +13,7 @@
       background-color: rgb(3, 36, 41);
       color: rgb(71, 167, 190);
       max-width: 500px;
+      border-radius: 4px;
     }
   </style>
 </head>
